feat: add gh CLI wrapper (fgh → Python rewrite)
Rewrite the Bash fgh script (708 lines) as a Python CLI wrapper.
Routes all gh commands through the fgap proxy for credential injection.

Features:
- Resource detection: git remote parse, -R/--repo flag, API endpoint
- Argument transformation: --body-file → --body, pr create --head injection
- Help display for discussion and sub-issue (gh has no native support)
- api graphql prohibition (use high-level commands instead)
- Entry point: fgap-gh (via pyproject.toml [project.scripts])

Auth command deferred to Step 6 (requires /auth/status endpoint design,
tied to credential masking).

52 tests added (225 total).

✍️ Author: Claude Code with @carrotRakko (AI-written, human-approved)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,8 @@ dev = [
     "pytest-asyncio>=0.23",
 ]
 
+[project.scripts]
+fgap-gh = "fgap.client.gh:main"
+
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
