--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dev = [
 
 [project.scripts]
 fgap-gh = "fgap.client.gh:main"
+fgap-gog = "fgap.client.gog:main"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
